# bodhi_migration

./: .eslintrc.cjs  .prettierrc  README.md  package.json  pnpm-lock.yaml
.config/: .git-commit-template
docs/: prompt.md
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  lib.rs  main.rs  migration.rs  models.rs
src-tauri/src/database/: connection.rs  connection_manager.rs  mod.rs  mysql.rs  redis.rs  redis_manager.rs  sqlite.rs  sqlx_db.rs
src-tauri/src/migration/: mod.rs  pipeline.rs  strategy.rs  task.rs
src-tauri/src/models/: app.rs  mod.rs
src/components/: DatabaseConfigForm.svelte  LoadingAnimation.svelte  LoadingContainer.svelte  MainDashboard.svelte  TaskCreationForm.svelte  TaskRunner.svelte
src/features/dashboard/: index.ts  main-dashboard.component.svelte
src/features/database/: database-config-form.component.svelte
src/features/database/types/: database.types.ts
src/features/database/utils/: database.utils.ts
src/features/loading/: index.ts  loading-container.component.svelte
src/features/loading/utils/: loading.utils.ts
src/features/task/: task-creation-form.component.svelte  task-runner.component.svelte
src/features/task/types/: task.types.ts
src/features/task/utils/: task.utils.ts
src/lib/: index.ts
src/lib/components/: index.ts
src/lib/components/ui/: card.component.svelte
src/lib/features/: index.ts
src/lib/features/dashboard/: dashboard.svelte  index.ts
src/lib/features/dashboard/types/: dashboard.types.ts
src/lib/features/dashboard/utils/: dashboard.utils.ts
src/lib/features/database/: database-config-form.component.svelte  database.svelte  index.ts
src/lib/features/loading/: Container.svelte  ModernLoadingAnimation.svelte  container.svelte  index.ts
src/lib/features/task/: index.ts  task-creation-form.component.svelte  task-runner.svelte
src/lib/stores/: app.store.ts  index.ts
src/lib/types/: database.types.ts  index.ts
src/lib/utils/: index.ts  loading.utils.ts
src/routes/: +page.svelte
src/routes/loading-demo/: +page.svelte
src/routes/password-test/: +page.svelte
src/shared/: index.ts
src/shared/components/ui/: button.component.svelte  input.component.svelte
src/shared/stores/: app.store.ts
src/stores/: appStore.ts
src/styles/: global.css
src/types/: database.ts
src/utils/: loadingUtils.ts
(+2 files in other folders)
