[package]
name = "bodhi_migration"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bodhi_migration_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.4.0"

# 数据库相关依赖
rusqlite = { version = "0.31.0", features = ["bundled"] }
mysql_async = "0.33.0"
redis = { version = "0.25.0", features = ["tokio-comp"] }

# 异步支持
tokio = { version = "1", features = ["full"] }

# 文件系统操作
dir = "0.1.2"
async-trait = "0.1.89"
uuid = { version = "1.18.1", features = ["v4"] }

