[package]
name = "bodhi_migration"
version = "0.1.0"
description = "Bodhi Migration"
authors = ["stanleyguo0207@163.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bodhi_migration_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.4.0"

# 数据库相关依赖 - 使用sqlx统一数据库操作
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "sqlite", "mysql", "postgres", "uuid", "chrono", "json"] }
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# 异步支持
tokio = { version = "1", features = ["full"] }

# 文件系统操作
dir = "0.1.2"
async-trait = "0.1.89"
uuid = { version = "1.18.1", features = ["v4"] }

